product search done

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,6 @@
 GEMINI_API_KEY=AIzaSyCCmpPxKLStp9qMDTh1D2GQxgiIInoV6Iw
 VITE_GOOGLE_CLIENT_ID=292258975779-3pc4c1109uusrqf65te68b7jsn9b0va1.apps.googleusercontent.com
+MONGO_URI=mongodb+srv://rajesh180206:Rajesh180206@procureai.smrdygu.mongodb.net/procuredb?retryWrites=true&w=majority&appName=Procureai
+RAPIDAPI_KEY=7f08f001fdmsh34f608ed9eae0cap103adbjsne0ffd3e12441
+RAPIDAPI_HOST=real-time-amazon-data.p.rapidapi.com
+
